--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8d2b6bc
-	base = 5022235
+	base = 0be38b2
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 5022235
