--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8d2b6bc
-	base = 406e2fe
+	base = 776eef5
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 406e2fe
