--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.2.4-1": ["Tue Jul 02 2024", "Alejandro Hern\u00e1ndez", "alejandro@openrobotics.com"], "1.2.3-1": ["Tue May 14 2024", "Alejandro Hern\u00e1ndez", "alejandro@openrobotics.com"]}
+{"1.2.5-1": ["Tue Jul 09 2024", "Alejandro Hern\u00e1ndez", "alejandro@openrobotics.com"], "1.2.4-1": ["Tue Jul 02 2024", "Alejandro Hern\u00e1ndez", "alejandro@openrobotics.com"], "1.2.3-1": ["Tue May 14 2024", "Alejandro Hern\u00e1ndez", "alejandro@openrobotics.com"]}
