--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b34e676
-	base = b5d5ae5
+	base = 07a90bf
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = b5d5ae5
