--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b34e676
-	base = 4e1459c
+	base = 9bf0e81
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 4e1459c
