--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b34e676
-	base = 3dfe44e
+	base = 140e4ce
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 3dfe44e
