--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b34e676
-	base = cf9db1a
+	base = 3c9491a
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = cf9db1a
