--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 39f4556
-	base = 7180565
+	base = 1d4fc97
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 7180565
