--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 39f4556
-	base = 537870f
+	base = 9622cea
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 537870f
