--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b96022b
-	base = 777ff12
+	base = be6876d
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 777ff12
