--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b96022b
-	base = 27c1df3
+	base = f25fb24
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 27c1df3
