--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6bb5ed3
-	base = 86d409b
+	base = 52db225
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 86d409b
