--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6bb5ed3
-	base = c47c993
+	base = c571fcf
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = c47c993
