--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = aee29b7
-	base = 5f83b37
+	base = 4e14a59
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 5f83b37
