--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = aee29b7
-	base = 7a2e3ab
+	base = b921394
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 7a2e3ab
