--- a/.github/workflows/ci-rolling.yaml
+++ b/.github/workflows/ci-rolling.yaml
@@ -1,14 +1,10 @@
 name: gz_ros2_control CI - Rolling
 
 on:
-  workflow_dispatch:
   pull_request:
-    branches: [ rolling ]
+    branches: [ master ]
   push:
-    branches: [ rolling ]
-  schedule:
-    # Run every morning to detect flakiness and broken dependencies
-    - cron: '03 5 * * *'
+    branches: [ master ]
 
 jobs:
   build:
