--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed8bd78
-	base = 429ac87
+	base = baa4380
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 429ac87
