--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed8bd78
-	base = 9a866f1
+	base = 509f037
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 9a866f1
