--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 23c5d6b
-	base = 6960b15
+	base = 5b52d62
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 6960b15
