--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 23c5d6b
-	base = f458804
+	base = 00ceb03
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = f458804
