--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.3.0-1": ["Tue May 14 2024", "Alejandro Hern\u00e1ndez", "alejandro@openrobotics.com"]}
+{"2.0.3-1": ["Wed Dec 11 2024", "Alejandro Hern\u00e1ndez", "alejandro@openrobotics.com"], "1.3.0-1": ["Tue May 14 2024", "Alejandro Hern\u00e1ndez", "alejandro@openrobotics.com"]}
