Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.3.0-1": ["Tue May 14 2024", "Alejandro Hernandez", "ahcorde@osrfoundation.org"]}
+{"2.0.3-1": ["Wed Dec 11 2024", "Alejandro Hernandez", "ahcorde@osrfoundation.org"], "1.3.0-1": ["Tue May 14 2024", "Alejandro Hernandez", "ahcorde@osrfoundation.org"]}
