--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2a5cff9
-	base = 7e9be65
+	base = 8c25090
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 7e9be65
