--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2a5cff9
-	base = 9d79cbc
+	base = 683915e
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 9d79cbc
