--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2a5cff9
-	base = b920cb8
+	base = 58bf243
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = b920cb8
