--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2a5cff9
-	base = 6bb88bf
+	base = 7da457c
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 6bb88bf
