--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 631b2c3
-	base = cf1f0a9
+	base = f8bfb1f
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = cf1f0a9
