--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 631b2c3
-	base = a710ae2
+	base = 90ce257
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = a710ae2
