--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b27a931
-	base = bd10f4a
+	base = 27545ed
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = bd10f4a
