--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b27a931
-	base = 2335ea1
+	base = 2fa05d0
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 2335ea1
