--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f31352a
-	base = cec6600
+	base = c57661c
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = cec6600
