--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f31352a
-	base = 63481cf
+	base = aad0b7c
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = 63481cf
