--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f31352a
-	base = 928b4d3
+	base = cf5c9b6
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = 928b4d3
