--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 12f3549
-	base = 433f793
+	base = d37b8dc
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 433f793
