--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 12f3549
-	base = 6c0595b
+	base = ab092f8
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 6c0595b
