--- a/gz_ros2_control_demos/config/diff_drive_controller.yaml
+++ b/gz_ros2_control_demos/config/diff_drive_controller.yaml
@@ -30,6 +30,7 @@
 
     cmd_vel_timeout: 0.5
     #publish_limited_velocity: true
+    use_stamped_vel: true
     #velocity_rolling_window_size: 10
 
     # Velocity and acceleration limits
