--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63c2905
-	base = 540443c
+	base = b165ba4
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 540443c
