--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63c2905
-	base = 33599d1
+	base = 0365d37
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 33599d1
