--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d070260
-	base = d726dad
+	base = 59564d5
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = d726dad
