--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d070260
-	base = 2b0241d
+	base = 3bb6ff4
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = 2b0241d
