--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d070260
-	base = f67ebc8
+	base = 8a20bce
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = f67ebc8
