--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 51dea61
-	base = 1d190e0
-	trim = 
-	trimbase = 
+	base = 7984293
+	trim = gz_ros2_control_demos
+	trimbase = 1d190e0
