--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 51dea61
-	base = ea8449f
+	base = cfe538e
 	trim = ign_ros2_control_demos
-	trimbase = 
+	trimbase = ea8449f
