--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 51dea61
-	base = a662bd3
+	base = cd80e16
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = a662bd3
