--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 51dea61
-	base = 64bbdcf
-	trim = 
-	trimbase = 
+	base = 9d1e597
+	trim = gz_ros2_control
+	trimbase = 64bbdcf
