--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 51dea61
-	base = 6fb755b
+	base = 64ad032
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = 6fb755b
