--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/gz_ros2_control_demos
-	previous = 
-	base = 7984293
+	previous = 7984293
+	base = 71ab67c
 	trim = 
 	trimbase = 
