--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/gz_ros2_control_demos
-	previous = 
-	base = a14c4a0
+	previous = a14c4a0
+	base = cf9a04b
 	trim = 
 	trimbase = 
