--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/gz_ros2_control
-	previous = 
-	base = 9d1e597
+	previous = 9d1e597
+	base = dbd02cc
 	trim = 
 	trimbase = 
