--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/gz_ros2_control
-	previous = 
-	base = 43aabc1
+	previous = 43aabc1
+	base = b55d6bf
 	trim = 
 	trimbase = 
