--- a/gz_ros2_control_demos/config/gripper_controller_effort.yaml
+++ b/gz_ros2_control_demos/config/gripper_controller_effort.yaml
@@ -2,14 +2,12 @@ controller_manager:
   ros__parameters:
     update_rate: 100  # Hz
 
-    gripper_controller:
-      type: forward_command_controller/ForwardCommandController
-
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
 gripper_controller:
   ros__parameters:
+    type: forward_command_controller/ForwardCommandController
     joints:
       - right_finger_joint
-    interface_name: position
+    interface_name: effort
