--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8ac3d55
-	base = ee05333
+	base = 32742e0
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = ee05333
