--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8ac3d55
-	base = 6bbb67d
+	base = 9c19cca
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 6bbb67d
