--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8cddeaf
-	base = 83a655e
+	base = 9a4dcb1
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 83a655e
