--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8cddeaf
-	base = 50d93d9
+	base = 2549010
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 50d93d9
