--- a/gz_ros2_control/CMakeLists.txt
+++ b/gz_ros2_control/CMakeLists.txt
@@ -24,21 +24,39 @@ find_package(pluginlib REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(yaml_cpp_vendor REQUIRED)
 
-find_package(gz_sim_vendor REQUIRED)
-find_package(gz-sim REQUIRED)
+set(GZ_PLUGIN)
+set(GZ_SIM)
 
-find_package(gz_plugin_vendor REQUIRED)
-find_package(gz-plugin REQUIRED)
+if("$ENV{GZ_VERSION}" STREQUAL "harmonic")
+  find_package(gz-sim8 REQUIRED)
+  set(GZ_SIM_VER ${gz-sim8_VERSION_MAJOR})
+  message(STATUS "Compiling against Gazebo harmonic")
+  find_package(gz-plugin2 REQUIRED)
+  set(GZ_PLUGIN_VER ${gz-plugin2_VERSION_MAJOR})
+  set(GZ_PLUGIN gz-plugin${GZ_PLUGIN_VER}::register)
+  set(GZ_SIM gz-sim${GZ_SIM_VER}::core)
+  add_definitions(-DGZ_HEADERS)
+else()
+  find_package(ignition-gazebo6 REQUIRED)
+  set(GZ_SIM_VER ${ignition-gazebo6_VERSION_MAJOR})
+  message(STATUS "Compiling against Gazebo fortress")
+  find_package(ignition-plugin1 REQUIRED)
+  set(GZ_PLUGIN_VER ${ignition-plugin1_VERSION_MAJOR})
+  set(GZ_PLUGIN ignition-plugin${GZ_PLUGIN_VER}::register)
+  set(GZ_SIM ignition-gazebo${GZ_SIM_VER}::core)
+endif()
 
 include_directories(include)
+
+#########
 
 add_library(${PROJECT_NAME}-system SHARED
   src/gz_ros2_control_plugin.cpp
 )
 
 target_link_libraries(${PROJECT_NAME}-system
-  gz-sim::gz-sim
-  gz-plugin::register
+  ${GZ_SIM}
+  ${GZ_PLUGIN}
 )
 ament_target_dependencies(${PROJECT_NAME}-system
   ament_index_cpp
@@ -61,7 +79,7 @@ ament_target_dependencies(gz_hardware_plugins
   rclcpp
 )
 target_link_libraries(gz_hardware_plugins
-  gz-sim::gz-sim
+  ${GZ_SIM}
 )
 
 ## Install
@@ -77,6 +95,26 @@ install(DIRECTORY
   DESTINATION include
 )
 
+#########
+
+add_library(ign_ros2_control-system SHARED
+  src/gz_ros2_control_plugin.cpp
+)
+
+target_link_libraries(ign_ros2_control-system
+  ${GZ_SIM}
+  ${GZ_PLUGIN}
+)
+ament_target_dependencies(ign_ros2_control-system
+  ament_index_cpp
+  controller_manager
+  hardware_interface
+  pluginlib
+  rclcpp
+  yaml_cpp_vendor
+  rclcpp_lifecycle
+)
+
 # Testing and linting
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -85,9 +123,13 @@ endif()
 
 ament_export_include_directories(include)
 ament_export_libraries(${PROJECT_NAME}-system gz_hardware_plugins)
+ament_export_libraries(ign_ros2_control-system gz_hardware_plugins)
 
 # Install directories
 install(TARGETS ${PROJECT_NAME}-system
+  DESTINATION lib
+)
+install(TARGETS ign_ros2_control-system
   DESTINATION lib
 )
 
