--- a/gz_ros2_control/package.xml
+++ b/gz_ros2_control/package.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0"?>
 <package format="3">
   <name>gz_ros2_control</name>
-  <version>2.0.7</version>
+  <version>0.7.14</version>
   <description>Gazebo ros2_control package allows to control simulated robots using ros2_control framework.</description>
   <maintainer email="alejandro@openrobotics.com">Alejandro Hernández</maintainer>
-  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
   <author>Alejandro Hernández</author>
   <license>Apache 2</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <!-- Harmonic -->
+  <depend condition="$GZ_VERSION == harmonic">gz-sim8</depend>
+  <depend condition="$GZ_VERSION == harmonic">gz-plugin2</depend>
+  <!-- Fortress (default) -->
+  <depend condition="$GZ_VERSION == '' or $GZ_VERSION == fortress">ignition-gazebo6</depend>
+  <depend condition="$GZ_VERSION == '' or $GZ_VERSION == fortress">ignition-plugin</depend>
+
   <depend>ament_index_cpp</depend>
-  <!-- default version to use in official ROS 2 packages is Gazebo Harmonic for ROS 2 Rolling -->
-  <depend>gz_sim_vendor</depend>
-  <depend>gz_plugin_vendor</depend>
+  <depend>controller_manager</depend>
+  <depend>hardware_interface</depend>
   <depend>pluginlib</depend>
+  <depend>rclcpp_lifecycle</depend>
   <depend>rclcpp</depend>
   <depend>yaml_cpp_vendor</depend>
-  <depend>rclcpp_lifecycle</depend>
-  <depend>hardware_interface</depend>
-  <depend>controller_manager</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
