--- a/gz_ros2_control_demos/config/ackermann_drive_controller.yaml
+++ b/gz_ros2_control_demos/config/ackermann_drive_controller.yaml
@@ -5,9 +5,12 @@ controller_manager:
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
+
+    ackermann_steering_controller:
+      type: 'ackermann_steering_controller/AckermannSteeringController'
+
 ackermann_steering_controller:
   ros__parameters:
-    type: 'ackermann_steering_controller/AckermannSteeringController'
     wheelbase: 1.7
     front_wheel_track: 1.0
     rear_wheel_track: 1.0
@@ -17,6 +20,7 @@ ackermann_steering_controller:
     reference_timeout: 2.0
     rear_wheels_names: ['rear_left_wheel_joint', 'rear_right_wheel_joint']
     front_wheels_names: ['left_wheel_steering_joint', 'right_wheel_steering_joint']
+    use_stamped_vel: true
     open_loop: false
     velocity_rolling_window_size: 10
     base_frame_id: base_link
