--- a/gz_ros2_control_demos/config/tricycle_drive_controller.yaml
+++ b/gz_ros2_control_demos/config/tricycle_drive_controller.yaml
@@ -2,15 +2,18 @@ controller_manager:
   ros__parameters:
     update_rate: 50 # Hz
 
+    tricycle_controller:
+      type: tricycle_controller/TricycleController
+
+    joint_state_broadcaster:
+      type: joint_state_broadcaster/JointStateBroadcaster
+
 joint_state_broadcaster:
   ros__parameters:
-    type: joint_state_broadcaster/JointStateBroadcaster
     extra_joints: ["right_wheel_joint", "left_wheel_joint"]
 
 tricycle_controller:
   ros__parameters:
-    type: tricycle_controller/TricycleController
-
     # Model
     traction_joint_name: traction_joint # Name of traction joint in URDF
     steering_joint_name: steering_joint # Name of steering joint in URDF
@@ -20,13 +23,13 @@ tricycle_controller:
     # Odometry
     odom_frame_id: odom
     base_frame_id: base_link
+    publish_rate: 50.0 # publish rate of odom and tf
     open_loop: false # if True, uses cmd_vel instead of hardware interface feedback to compute odometry
     enable_odom_tf: true # If True, publishes odom<-base_link TF
     odom_only_twist: false # If True, publishes on /odom only linear.x and angular.z; Useful for computing odometry in another node, e.g robot_localization's ekf
     pose_covariance_diagonal: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0] # Need to be set if fusing odom with other localization source
     twist_covariance_diagonal: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0] # Need to be set if fusing odom with other localization source
     velocity_rolling_window_size: 10 # Rolling window size of rcppmath::RollingMeanAccumulator applied on linear and angular speeds published on odom
-
     # Rate Limiting
     traction: # All values should be positive
       # min_velocity: 0.0
@@ -47,6 +50,7 @@ tricycle_controller:
 
     # cmd_vel input
     cmd_vel_timeout: 500 # In milliseconds. Timeout to stop if no cmd_vel is received
+    use_stamped_vel: false # Set to True if using TwistStamped.
 
     # Debug
     publish_ackermann_command: true # Publishes AckermannDrive. The speed does not comply to the msg definition, it the wheel angular speed in rad/s.
