--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6b52ead
-	base = a46a7f4
+	base = 6b29c67
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = a46a7f4
