--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6b52ead
-	base = 43218cc
+	base = 6a637c8
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = 43218cc
