--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6b52ead
-	base = 2d9b085
+	base = 072d651
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = 2d9b085
