--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ac20952754
-	base = f0768ddff553
+	base = 6f3778c92db4
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = f0768ddff553
