--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ac20952754
-	base = bbdab4764fc1
+	base = 94902d26ee42
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = bbdab4764fc1
