--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a2514fe
-	base = c6e7046
+	base = 40461f9
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = c6e7046
