Imported upstream version '0.7.15' of 'upstream'

--- a/gz_ros2_control_demos/CMakeLists.txt
+++ b/gz_ros2_control_demos/CMakeLists.txt
@@ -25,44 +25,55 @@ find_package(geometry_msgs REQUIRED)
 install(DIRECTORY
   launch
   config
-  sdf
   urdf
   DESTINATION share/${PROJECT_NAME}/
 )
 
 add_executable(example_position examples/example_position.cpp)
-target_link_libraries(example_position PUBLIC
-  ${control_msgs_TARGETS}
-  rclcpp::rclcpp
-  rclcpp_action::rclcpp_action
+ament_target_dependencies(example_position
+  rclcpp
+  rclcpp_action
+  control_msgs
 )
 
 # use the same example_position.cpp for example_velocity
 add_executable(example_velocity examples/example_position.cpp)
-target_link_libraries(example_velocity PUBLIC
-  ${control_msgs_TARGETS}
-  rclcpp::rclcpp
-  rclcpp_action::rclcpp_action
+ament_target_dependencies(example_velocity
+  rclcpp
+  rclcpp_action
+  control_msgs
 )
 
 # use the same example_position.cpp for example_effort
 add_executable(example_effort examples/example_position.cpp)
-target_link_libraries(example_effort PUBLIC
-  ${control_msgs_TARGETS}
-  rclcpp::rclcpp
-  rclcpp_action::rclcpp_action
+ament_target_dependencies(example_effort
+  rclcpp
+  rclcpp_action
+  control_msgs
 )
 
-add_executable(example_mobile_robots examples/example_mobile_robots.cpp)
-target_link_libraries(example_mobile_robots
-  rclcpp::rclcpp
-  ${geometry_msgs_TARGETS}
+add_executable(example_diff_drive examples/example_diff_drive.cpp)
+ament_target_dependencies(example_diff_drive
+  rclcpp
+  geometry_msgs
+)
+
+add_executable(example_tricycle_drive examples/example_tricycle_drive.cpp)
+ament_target_dependencies(example_tricycle_drive
+  rclcpp
+  geometry_msgs
+)
+
+add_executable(example_ackermann_drive examples/example_ackermann_drive.cpp)
+ament_target_dependencies(example_ackermann_drive
+  rclcpp
+  geometry_msgs
 )
 
 add_executable(example_gripper examples/example_gripper.cpp)
-target_link_libraries(example_gripper PUBLIC
-  ${std_msgs_TARGETS}
-  rclcpp::rclcpp
+ament_target_dependencies(example_gripper
+  rclcpp
+  std_msgs
 )
 
 if(BUILD_TESTING)
@@ -77,7 +88,9 @@ install(
     example_position
     example_velocity
     example_effort
-    example_mobile_robots
+    example_diff_drive
+    example_tricycle_drive
+    example_ackermann_drive
     example_gripper
   DESTINATION
     lib/${PROJECT_NAME}
