--- a/gz_ros2_control_demos/config/ackermann_drive_controller.yaml
+++ b/gz_ros2_control_demos/config/ackermann_drive_controller.yaml
@@ -5,17 +5,22 @@ controller_manager:
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
+
+    ackermann_steering_controller:
+      type: 'ackermann_steering_controller/AckermannSteeringController'
+
 ackermann_steering_controller:
   ros__parameters:
-    type: 'ackermann_steering_controller/AckermannSteeringController'
     wheelbase: 1.7
-    traction_track_width: 1.0
-    steering_track_width: 1.0
-    traction_wheels_radius: 0.3
-    steering_wheels_radius: 0.3
-    reference_timeout: 2.0 # In s. Timeout to stop if no cmd_vel is received
-    traction_joints_names: ['rear_right_wheel_joint', 'rear_left_wheel_joint']
-    steering_joints_names: ['right_wheel_steering_joint', 'left_wheel_steering_joint']
+    front_wheel_track: 1.0
+    rear_wheel_track: 1.0
+    front_wheels_radius: 0.3
+    rear_wheels_radius: 0.3
+    front_steering: true
+    reference_timeout: 2.0
+    rear_wheels_names: ['rear_right_wheel_joint', 'rear_left_wheel_joint']
+    front_wheels_names: ['right_wheel_steering_joint', 'left_wheel_steering_joint']
+    use_stamped_vel: true
     open_loop: false
     velocity_rolling_window_size: 10
     base_frame_id: base_link
