--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ea50d3c
-	base = f166da5
+	base = b386b16
 	trim = gz_ros2_control_tests
-	trimbase = 
+	trimbase = f166da5
