--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ea50d3c
-	base = 3adb2e1
+	base = 061589f
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 3adb2e1
