--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ea50d3c
-	base = aa19e44
+	base = 52ccf4b
 	trim = ign_ros2_control
-	trimbase = 
+	trimbase = aa19e44
