--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dd8f663
-	base = 6b37ed9
+	base = 2f42626
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 6b37ed9
