--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dd8f663
-	base = 318d628
+	base = a477ae7
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 318d628
