--- a/.github/workflows/ci-jazzy.yaml
+++ b/.github/workflows/ci-jazzy.yaml
@@ -8,7 +8,7 @@ on:
     branches: [ jazzy ]
   schedule:
     # Run every morning to detect flakiness and broken dependencies
-    - cron: '03 4 * * *'
+    - cron: '03 4 * * MON-FRI'
 
 jobs:
   build:
