--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cb4825b
-	base = 12cda5b
+	base = b2a1252
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 12cda5b
