--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cb4825b
-	base = 5ad33fd
+	base = 0aa4152
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 5ad33fd
