--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6f6f25a
-	base = 63b5923
+	base = afac188
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 63b5923
