--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6f6f25a
-	base = d837f6a
+	base = 1fafc47
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = d837f6a
