Imported upstream version '3.0.1' of 'upstream'

--- a/gz_ros2_control_tests/tests/CMakeLists.txt
+++ b/gz_ros2_control_tests/tests/CMakeLists.txt
@@ -11,3 +11,6 @@ add_launch_test(velocity_test.py
 add_launch_test(effort_test.py
   TIMEOUT 50
 )
+add_launch_test(ft_sensor_test.py
+  TIMEOUT 50
+)
