--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f9aafb9
-	base = 4327f36
+	base = d64f14e
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 4327f36
