--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7423959
-	base = 5e5c68a
+	base = e29cd15
 	trim = gz_ros2_control_demos
-	trimbase = 
+	trimbase = 5e5c68a
