--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7423959
-	base = 4aac4e5
+	base = 303ef0f
 	trim = gz_ros2_control
-	trimbase = 
+	trimbase = 4aac4e5
